VAAPI-JDA: OutputPicture should fail if I420 conversion fails.

This CL makes VaapiJpegDecodeAccelerator::OutputPicture() return early
if it's not possible to convert the image to I420 format. Otherwise, it
would be wrongly notifying the client of success in this case.

Bug: 924295
Test: JDA unit tests pass on an eve.
Change-Id: I57f558e2e0061ceef93600a9c373596150035fa5
Reviewed-on: https://chromium-review.googlesource.com/c/1427880
Reviewed-by: Miguel Casas <mcasas@chromium.org>
Commit-Queue: Andres Calderon Jaramillo <andrescj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624962}
Former-commit-id: 441042454df0102f1194e04ffda617a8387823f9